--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "node": true
     },
     "extends": [
         "eslint:recommended",
@@ -17,6 +18,12 @@
         "prettier"
     ],
     "rules": {
-        "prettier/prettier": 1
+        "prettier/prettier": [
+            "error",
+            {
+                "trailingComma": "all"
+            }
+        ],
+        "@typescript-eslint/no-explicit-any": 0
     }
 }
